# ros2_coppelia_learning

./: .gitignore  README.md
Twincat3/conveyor_plc/: conveyor_plc.sln
Twincat3/conveyor_plc/conveyor_plc/conveyor_plc_project/: PlcTask.TcTTO  conveyor_plc_project.plcproj  conveyor_plc_project.tmc
coppeliasim_ws/project1_coppelia_ros2_testing/: example_ros.ttt  vision_stream_restream.ttt
py_src/: logger.py  plc_connector.py  plc_signals.py  plc_sim_bridge.py  test_ads.py
py_test/: test_plc.py
python_ws/pyads_plc_sim/: TODO.md  plc_main.py
python_ws/pyads_plc_sim/py_src/: ParseIO2Json.py  plc_connector.py  plc_signals.py  plc_sim_bridge.py  test_ads.py
python_ws/pyads_plc_sim/py_test/: test_bridge.py  test_plc.py
ros2_ws/src/color_to_grayscale_restreamer/: package.xml  setup.cfg  setup.py
ros2_ws/src/color_to_grayscale_restreamer/color_to_grayscale_restreamer/: py_color2grayscale.py
ros2_ws/src/color_to_grayscale_restreamer/launch/: grayscale_sim.launch.py
ros2_ws/src/color_to_grayscale_restreamer/test/: test_image_logic.py
ros2_ws/src/learning_tf2_py/: package.xml  setup.py
ros2_ws/src/learning_tf2_py/launch/: turtle_tf2_demo_launch.py
ros2_ws/src/learning_tf2_py/learning_tf2_py/: turtle_tf2_broadcaster.py
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/pyads_coppelia_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/pyads_coppelia_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/pyads_coppelia_msg/: setup.py
ros2_ws/src/sub_proj1_coppelia/: package.xml  setup.cfg  setup.py
(+9 files in other folders)
