<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>color_to_grayscale_restreamer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="antoronson590@gmail.com">anto</maintainer>
  <license>Apache_2.0</license>

  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3_opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
